--- a/SitnShop/client/templates/pages/index.html
+++ b/SitnShop/client/templates/pages/index.html
@@ -16,9 +16,9 @@
 		<div class="navbar">
   			<a href="index.html" style="float: left;font-family: 'Aclonica';"><i class="fa fa-fw fa-home"></i><h3> SitnShop</h3></a> 
   			<a href="#"><i class="fa fa-fw fa-envelope"></i><h3> Contact</h3></a> 
-  			<a href="login_page.html"><i class="fa fa-fw fa-user"></i><h3> Login</h3></a>
+  			<a href="/home/login"><i class="fa fa-fw fa-user"></i><h3> Login</h3></a>
   			<div class="search-container">
-    			<form action="/action_page.php">
+    			<form action="post">
     				<button type="submit"><i class="fa fa-search"></i></button>
       				<input type="text" placeholder="Search" name="search">
       				
