--- a/SitnShop/client/templates/pages/index_page.html
+++ b/SitnShop/client/templates/pages/index_page.html
@@ -14,11 +14,12 @@
 	<body>
 
 		<div class="navbar">
-  			<a href="index.html" style="float: left;font-family: 'Aclonica';"><i class="fa fa-fw fa-home"></i><h3> SitnShop</h3></a> 
+  			<a href="/home/" style="float: left;font-family: 'Aclonica';"><i class="fa fa-fw fa-home"></i><h3> SitnShop</h3></a>
   			<a href="#"><i class="fa fa-fw fa-envelope"></i><h3> Contact</h3></a> 
-  			<a href="login_page.html"><i class="fa fa-fw fa-user"></i><h3> Login</h3></a>
+  			<a href="/home/login"><i class="fa fa-fw fa-user"></i><h3> Login</h3></a>
   			<div class="search-container">
-    			<form action="/action_page.php">
+    			<form method="post">
+					{% csrf_token %}
     				<button type="submit"><i class="fa fa-search"></i></button>
       				<input type="text" placeholder="Search" name="search">
       				
@@ -44,13 +45,12 @@
 				{% endwith %}
 
 
-			{{ user }}
-			{{entry }}
-			{% if user.pk == entry.pk %}
-				<a href="/home/profile/"><h1>&nbsp&nbsp {{ entry }} </h1></a>
+
+			{% if user == entry.user %}
+				<a href="/home/profile/"><h1> {{ entry }} </h1></a>
 			{% else %}
 				{% with "/home"|add:"/"|add:"public/"|add:pk as url %}
-				<a href= {{ url }}><h1>&nbsp&nbsp {{ entry }} </h1></a>
+				<a href= {{ url }}><h1>{{ entry }} </h1></a>
 			{% endwith %}
 			{% endif %}
 
