--- a/SitnShop/client/templates/pages/profile.html
+++ b/SitnShop/client/templates/pages/profile.html
@@ -54,7 +54,7 @@
 
         <img class="avatar" src="{% static image_static_1 %}" alt="dp">
           {% endwith %}
-        <h1>&nbsp&nbsp {{ user }} </h1>
+        <h1> {{ user }} </h1>
 
           <small> {{ time }}</small>
         <hr style="background-color:rgb(232,232,232);border: 0;height: 3px">
