--- a/SitnShop/market/templates/market/shop_signup.html
+++ b/SitnShop/market/templates/market/shop_signup.html
@@ -20,3 +20,11 @@
   		</div>
 	
 {% endblock %}
+
+{% block javascript %}
+  <script>
+    $("#id_shop_category").change(function () {
+      console.log( $(this).val() );
+    });
+  </script>
+{% endblock %}
